Fix spacing issue on Submit resource page

--- a/app/ts/components/administration/submit-resource/submit-resource.scss
+++ b/app/ts/components/administration/submit-resource/submit-resource.scss
@@ -98,6 +98,10 @@ $input-height: 2em;
         }
       }
 
+      .resource-type-dropdown {
+        margin-top: 4px;
+      }
+
       .tag-area {
         @extend %input-style;
         min-height: $input-height;
